tests/baselines/reference/defaultKeywordWithoutExport1.errors.txt
tests/cases/compiler/defaultKeywordWithoutExport1.ts(4,1): error TS1029: 'export' modifier must precede 'default' modifier.


==== tests/cases/compiler/defaultKeywordWithoutExport1.ts (1 errors) ====
    declare function decorator(constructor: any): any;
    
    @decorator
    default class {}
    ~~~~~~~
!!! error TS1029: 'export' modifier must precede 'default' modifier.